tdf#78506 RTF import: fix handling of invalid \levelnumbers

In case ';' is written in \u form in \levelnumbers, then Word ignores the whole
\levelnumbers contents, do the same.

(cherry picked from commit 428a1da60b88415e7db21353a42bed85b8b76ed9)

Change-Id: I93ce5810af2b5ed703e804199c0b236d2c4c36b5
Reviewed-on: https://gerrit.libreoffice.org/27873
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>